# PGameStudio

./: .gitignore  CMakeLists.txt  README  clean.sh  common.cmake  coverage.sh  cppcheck.sh  cppcheck.txt  gen_cb_debug.sh
src/Core/: CMakeLists.txt
src/Core/Core/: Application.cpp  Application.h  TaskScheduler.cpp  TaskScheduler.h
src/Core/Core/Events/: EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  typedefs.h
src/Core/Core/Scene/: Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SystemScene.cpp  SystemScene.h
src/Core/Graphics/: Camera.cpp  Camera.h  DrawCall.h  GraphicsContext.cpp  GraphicsContext.h  Material.h  MonoViewCamera.cpp  MonoViewCamera.h  MultiViewCamera.cpp  MultiViewCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  StereoViewCamera.cpp  StereoViewCamera.h  VertexFormat.cpp  VertexFormat.h  Window.cpp  Window.h
src/Core/Platform/: Library.h  LibraryManager.cpp  LibraryManager.h  PlatformImpl.cpp  PlatformImpl.h  PlatformManager.cpp  PlatformManager.h
src/Core/Platform/Linux/: Library.cpp  Library.h
src/Core/Platform/Windows/: Library.cpp  Library.h
src/Demo/: CMakeLists.txt  Demo.cpp
src/Game/: CMakeLists.txt
src/Game/Game/: Application.cpp  Application.h  StateManager.cpp  StateManager.h
src/Platform.Editor/: CMakeLists.txt
src/Platform.Editor/Platform/: main.cpp
src/Platform.Editor/Platform/Editor/: GraphicsContext.cpp  GraphicsContext.h  Platform.cpp  Platform.h  Window.cpp  Window.h
src/Platform.Linux/: CMakeLists.txt
src/Platform.Linux/Platform/: main.cpp
src/Platform.Linux/Platform/Linux/: GLXGraphicsContext.cpp  GLXGraphicsContext.h  Platform.cpp  Platform.h  X11EventHandler.cpp  X11EventHandler.h  XWindow.cpp  XWindow.h
src/Renderer.OpenGL/: CMakeLists.txt
src/Renderer.OpenGL/Renderer/: AnaglyphCompositor.cpp  AnaglyphCompositor.h  DefaultCompositor.cpp  DefaultCompositor.h  Effect.cpp  Effect.h  EffectInitializer.cpp  EffectInitializer.h  EffectManager.cpp  EffectManager.h  EffectRequest.h  ErrorHandler.cpp  ErrorHandler.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  IndexBufferInitializer.cpp  IndexBufferInitializer.h  IndexBufferRequest.h  Manager.cpp  Manager.h  MultiViewCompositor.cpp  MultiViewCompositor.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Texture.cpp  Texture.h  TextureInitializer.cpp  TextureInitializer.h  TextureRequest.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferInitializer.cpp  VertexBufferInitializer.h  VertexBufferManager.cpp  VertexBufferManager.h  VertexBufferRequest.h  Viewport.cpp  Viewport.h  (+1 more)
src/Scripting/: CMakeLists.txt
src/Scripting.Lua/: CMakeLists.txt
src/Scripting.Lua/Scripting/: main.cpp
src/Scripting.Lua/Scripting/Lua/: Allocator.cpp  Allocator.h  Engine.cpp  Engine.h  Extractor.cpp  Extractor.h  LuaScript.cpp  LuaScript.h  Wrapper.cpp  Wrapper.h
src/Scripting/Scripting/: Allocator.cpp  Allocator.h  Command.cpp  Command.h  Engine.cpp  Engine.h  Executor.cpp  Executor.h  ExecutorTask.cpp  ExecutorTask.h  Extractor.cpp  Extractor.h  ExtractorProxy.cpp  ExtractorProxy.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h  ScriptManagerFactory.cpp  ScriptManagerFactory.h  SystemScene.cpp  SystemScene.h  main.cpp  typedefs.h
src/StackTrace/: CMakeLists.txt  StackFrame.cpp  StackFrame.h  StackTrace.cpp  StackTrace.h
src/Utilities/: CMakeLists.txt
src/Utilities/Utilities/: StopWatch.cpp  StopWatch.h  functions.cpp  functions.h  string.h
src/Utilities/Utilities/IO/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystemBackend.h  FileSystemFactory.cpp  FileSystemFactory.h  XmlAllocator.cpp  XmlAllocator.h  XmlReader.cpp  XmlReader.h  rapidxml_print.hpp  rapidxml_utils.hpp
src/Utilities/Utilities/IO/Backend/: PhysFS.cpp  PhysFS.h
src/Utilities/Utilities/IO/Exceptions/: FileNotFoundException.cpp  FileNotFoundException.h
src/Utilities/Utilities/Memory/: AbstractManager.cpp  AbstractManager.h  AbstractMemoryManager.cpp  AbstractMemoryManager.h  AllocationException.cpp  AllocationException.h  AllocationInfo.cpp  AllocationInfo.h  Allocator.cpp  Allocator.h  DebugMemoryTracker.cpp  DebugMemoryTracker.h  FixedPageSizePool.cpp  FixedPageSizePool.h  LargeObjectAllocator.cpp  LargeObjectAllocator.h  LargeObjectMemoryManager.cpp  LargeObjectMemoryManager.h  MediumObjectAllocator.cpp  MediumObjectAllocator.h  MemoryManager.cpp  MemoryManager.h  MemoryManagerSettings.h  MemoryPoolSettings.cpp  MemoryPoolSettings.h  MemoryTracker.cpp  MemoryTracker.h  OutOfMemoryException.cpp  OutOfMemoryException.h  Pool.cpp  Pool.h  PoolManager.cpp  PoolManager.h  STLAllocator.cpp  STLAllocator.h  SmallObjectAllocator.cpp  SmallObjectAllocator.h  SmallObjectMemoryManager.cpp  SmallObjectMemoryManager.h  constants.h  (+1 more)
src/Utilities/Utilities/Memory/Allocators/: Allocator.cpp  Allocator.h  LargeObjectAllocator.cpp  LargeObjectAllocator.h  MediumObjectAllocator.cpp  MediumObjectAllocator.h  SmallObjectAllocator.cpp  (+1 more)
src/Utilities/Utilities/Properties/: PropertyChangeListener.h  PropertyManager.cpp  PropertyManager.h
testsrc/AITests/: CMakeLists.txt
testsrc/AtmosphereTests/: CMakeLists.txt
testsrc/GameTests/: CMakeLists.txt
testsrc/GeometryTests/: CMakeLists.txt
testsrc/GraphicsTests/: CMakeLists.txt
testsrc/InputTests/: CMakeLists.txt
testsrc/MathTests/: CMakeLists.txt
testsrc/MathTests/Math/: Matrix4Test.cpp  Vector2Test.cpp  Vector3Test.cpp
testsrc/ParticlesTests/: CMakeLists.txt
testsrc/Physics.BulletTests/: CMakeLists.txt
testsrc/PhysicsTests/: CMakeLists.txt
testsrc/Platform.LinuxTests/: CMakeLists.txt
testsrc/RenderContextLinuxOpenGL3Tests/: CMakeLists.txt
testsrc/Renderer.OpenGL3Tests/: CMakeLists.txt
testsrc/Scripting.AngelscriptTests/: CMakeLists.txt
testsrc/Scripting.LuaTests/: CMakeLists.txt
testsrc/ScriptingTests/: CMakeLists.txt
testsrc/Sound.OpenALTests/: CMakeLists.txt
testsrc/SoundTests/: CMakeLists.txt
testsrc/TerrainTests/: CMakeLists.txt
testsrc/TestRunner/: CMakeLists.txt  main.cpp
(+3568 files in other folders)
